@dr-js/browser@0.0.0-dev.0
notable change:
- break: rename from `dr-browser`

--- a/example/index.html
+++ b/example/index.html
@@ -3,10 +3,10 @@
 <meta name="viewport" content="initial-scale=1, width=device-width" />
 <title>example</title>
 <link rel="icon" href="./favicon.ico">
-<script src="../node_modules/dr-js/library/Dr.browser.js"></script>
-<script>window.Dr || document.write('<script src="https://unpkg.com/dr-js"><\/script>')</script>
+<script src="../node_modules/@dr-js/core/library/Dr.browser.js"></script>
+<script>window.Dr || document.write('<script src="https://unpkg.com/@dr-js/core"><\/script>')</script>
 <script src="../output-gitignore/library/index.js"></script>
-<script>window.DrBrowser || document.write('<script src="https://unpkg.com/dr-browser"><\/script>')</script>
+<script>window.DrBrowser || document.write('<script src="https://unpkg.com/@dr-js/browser"><\/script>')</script>
 <script src="base.js"></script>
 <script src="test-canvas.js"></script>
 <script src="test-font.js"></script>
