--- a/example/index.html
+++ b/example/index.html
@@ -7,8 +7,26 @@
 <script>window.Dr || document.write('<script src="https://unpkg.com/@dr-js/core"><\/script>')</script>
 <script src="../output-gitignore/library/index.js"></script>
 <script>window.DrBrowser || document.write('<script src="https://unpkg.com/@dr-js/browser"><\/script>')</script>
-<script src="base.js"></script>
-<script src="test-canvas.js"></script>
-<script src="test-font.js"></script>
-<script src="test-swipe-scroll.js"></script>
-<script src="test-edge-swipe.js"></script>
+<script type="module">
+  import { COMMON_STYLE, COMMON_FUNC_MAP } from '../node_modules/@dr-js/core/module/node/server/commonHTML.js'
+
+  const parseHTMLFunc = (HTML) => {
+    const elementList = [ ...window.cE('div', { innerHTML: HTML }).children ]
+    elementList.forEach((element) => element.remove())
+    return elementList
+  }
+  const addContent = (headHTML, bodyHTML, func) => window.tDR(() => {
+    headHTML && parseHTMLFunc(headHTML).forEach((element) => document.head.appendChild(element))
+    bodyHTML && parseHTMLFunc(bodyHTML).forEach((element) => document.body.appendChild(element))
+    func && func()
+  })
+
+  // apply style & script
+  document.head.innerHTML += COMMON_STYLE({ boxReset: false, bodyReset: false })
+  Object.assign(window, { ...COMMON_FUNC_MAP(), addContent })
+</script>
+<script type="module" src="test-base.js"></script>
+<script type="module" src="test-canvas.js"></script>
+<script type="module" src="test-font.js"></script>
+<script type="module" src="test-swipe-scroll.js"></script>
+<script type="module" src="test-edge-swipe.js"></script>
